--- a/app/src/main/res/layout/activity_opciones_inmobiliaria.xml
+++ b/app/src/main/res/layout/activity_opciones_inmobiliaria.xml
@@ -37,10 +37,7 @@
             android:layout_gravity="fill"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
-            app:cardUseCompatPadding="true"
-
-
-            >
+            app:cardUseCompatPadding="true">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -147,7 +144,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_home"
+                    android:src="@drawable/ic_exit"
                     />
                 <TextView
                     android:layout_width="wrap_content"
