--- a/app/src/main/res/layout/activity_restablecer_contra.xml
+++ b/app/src/main/res/layout/activity_restablecer_contra.xml
@@ -11,9 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
-        android:text="Restablecer Contraseña"
+        android:text="@string/restablecer_contrase_a"
         android:textColor="@color/purple_700"
-        android:textSize="24dp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,19 +24,19 @@
         android:layout_width="311dp"
         android:layout_height="96dp"
         android:layout_marginTop="40dp"
-        android:text="Introduce el Email asociado a la cuenta y te enviaremos un email con las instrucciones para restablcer la contraseña."
-        android:textSize="16dp"
+        android:text="@string/introduce_el_email_asociado_a_la_cuenta_y_te_enviaremos_un_correo_con_las_instrucciones_para_restablecer_la_contrase_a"
+        android:textColor="@color/black"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView13"
-        android:textColor="@color/black"/>
+        app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <EditText
         android:id="@+id/edEmailRecuperar"
         android:layout_width="305dp"
         android:layout_height="52dp"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/btnEnviarInstru"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
         android:layout_width="292dp"
         android:layout_height="52dp"
         android:layout_marginTop="104dp"
-        android:text="Enviar Instrucciones"
+        android:text="@string/enviar_instrucciones"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="Haz Click En La Gota Para Volver!"
+        android:text="@string/haz_click_en_la_gota_para_volver"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
