--- a/app/src/main/res/layout/activity_actu_datos_inmobiliarias.xml
+++ b/app/src/main/res/layout/activity_actu_datos_inmobiliarias.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".ActuDatosInmobiliarias">
 
+    <ImageView
+        android:id="@+id/imgPerfi12"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_gravity="end"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/ic_person"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/btnGuardar"
         android:layout_width="wrap_content"
@@ -32,11 +43,11 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="72dp"
         android:text="Actualizar Datos"
         android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,7 +55,7 @@
         android:id="@+id/edtNombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="52dp"
         android:ems="10"
         android:hint="Nombre"
         android:inputType="textPersonName"
