--- a/app/src/main/res/layout/activity_propiedades_favoritas_usuarios.xml
+++ b/app/src/main/res/layout/activity_propiedades_favoritas_usuarios.xml
@@ -6,12 +6,20 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".PropiedadesFavoritasUsuarios">
-
+    <ImageView
+        android:id="@+id/imgPerfil"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_gravity="end"
+        android:src="@drawable/ic_person"
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:id="@+id/txtSinProp"
         android:layout_gravity="center"
         android:text="No tienes propiedades Favoritas!"
