--- a/app/src/main/res/drawable/botontransparente.xml
+++ b/app/src/main/res/drawable/botontransparente.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <stroke android:color="@color/purple_700" android:width="1dp"/>
+    <stroke android:color="@color/black" android:width="1dp"/>
     <corners android:radius="5dp"/>
 
 
