--- a/app/src/main/res/layout/activity_actu_datos_propiedad.xml
+++ b/app/src/main/res/layout/activity_actu_datos_propiedad.xml
@@ -78,5 +78,14 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtPrecio" />
+    <ImageView
+        android:id="@+id/imgCerrarSesion"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/ic_exit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
