--- a/app/src/main/res/layout/activity_propiedades_inmobiliaria.xml
+++ b/app/src/main/res/layout/activity_propiedades_inmobiliaria.xml
@@ -7,15 +7,26 @@
     android:orientation="vertical"
     tools:context=".propiedadesInmobiliaria">
 
+
+    <ImageView
+        android:id="@+id/imgPerfilll"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_gravity="end"
+        android:src="@drawable/ic_person"
+/>
+
     <TextView
         android:id="@+id/txtSinProppp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:text="No tienes propiedades Registradas!"
+        android:layout_marginTop="10dp"
+        android:text="@string/no_tienes_ninguna"
         android:textColor="@color/purple_700"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecyclerViewid"
