--- a/app/src/main/res/layout/activity_propiedades_favoritas_usuarios.xml
+++ b/app/src/main/res/layout/activity_propiedades_favoritas_usuarios.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context=".PropiedadesFavoritasUsuarios">
     <ImageView
-        android:id="@+id/imgPerfil"
+        android:id="@+id/imgPerfillll"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
