--- a/app/src/main/res/layout/activity_actualziar_datos_usuario.xml
+++ b/app/src/main/res/layout/activity_actualziar_datos_usuario.xml
@@ -8,35 +8,45 @@
 
     <Button
         android:id="@+id/btnGuardar1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="56dp"
+        android:layout_width="132dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="188dp"
+        android:background="@drawable/botoncolor"
         android:text="Actualizar"
-        app:layout_constraintBottom_toTopOf="@+id/btnOpciones1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtNombre1" />
 
-    <Button
-        android:id="@+id/btnOpciones1"
+    <ImageView
+        android:id="@+id/imgFotoFondo"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="@drawable/fondo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/menuUsuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="92dp"
-        android:text="Menu"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/ic_baseline_menu_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView121"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="80dp"
         android:text="Actualizar Datos"
-        android:textSize="24dp"
+        android:textColor="@color/white"
+        android:textSize="26dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,7 +54,7 @@
         android:id="@+id/edtNombre1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="160dp"
         android:ems="10"
         android:hint="Nombre"
         android:inputType="textPersonName"
@@ -54,11 +64,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView121" />
 
+    <ImageView
+        android:id="@+id/perfilUsuario"
+        android:layout_width="64dp"
+        android:layout_height="58dp"
+        android:src="@drawable/ic_person"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnGuardar1" />
+
     <EditText
         android:id="@+id/edtTelefono1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="124dp"
+        android:layout_marginBottom="72dp"
         android:ems="10"
         android:hint="Teléfono"
         android:inputType="textPersonName"
