--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -5,15 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Registro">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/circulito"
+        />
 
     <TextView
         android:id="@+id/txtUsuarioTitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
-        android:textSize="24dp"
+        android:textSize="24sp"
         android:text="@string/regcli"
-        android:textColor="@color/purple_700"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,8 +29,10 @@
         android:layout_width="240dp"
         android:layout_height="46dp"
         android:layout_marginTop="132dp"
-        android:text="Registrar"
-        android:background="@drawable/botoncolor"
+        android:text="@string/registrar"
+        android:textSize="18sp"
+        android:textColor="@color/purple_700"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
@@ -35,7 +42,8 @@
         android:layout_width="248dp"
         android:layout_height="20dp"
         android:layout_marginTop="24dp"
-        android:text="Tienes Cuenta? Haz click para iniciar sesión"
+        android:textColor="@color/white"
+        android:text="@string/cnt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +55,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="130dp"
         android:ems="10"
-        android:hint="Nombre"
+        android:hint="@string/nombre"
+        android:shadowColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +72,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:ems="10"
-        android:hint="Clave"
+        android:hint="@string/clave"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,7 +88,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +105,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:ems="10"
-        android:hint="Teléfono"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:hint="@string/tel_fono"
         android:inputType="phone"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -103,10 +120,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Direccion"
+        android:hint="@string/direcci_n"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:visibility="invisible"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/switch1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -120,6 +139,7 @@
         android:layout_height="wrap_content"
         android:textSize="15sp"
         android:checked="true"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/btnregistrar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
